--- a/codename/package.json
+++ b/codename/package.json
@@ -10,6 +10,8 @@
     "@typescript-eslint/parser": "^4.5.0",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^4.5.3",
+    "d3-fetch": "^2.0.0",
+    "d3-scale": "^3.2.3",
     "eslint": "^7.12.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
@@ -26,6 +28,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-simple-maps": "^2.1.2",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
