--- a/.github/workflows/cloud-run.yml
+++ b/.github/workflows/cloud-run.yml
@@ -25,9 +25,37 @@ env:
   SERVICE_NAME: codename-web-app
 
 jobs:
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Use Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: '12.x'
+
+    - name: Access source directory
+      run: cd codename
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Test
+      run: npm test
+      env:
+        CI: true
+
+    - name: Build static assets
+      run: npm run build
+
   setup-build-deploy:
     name: Setup, Build, and Deploy
     runs-on: ubuntu-latest
+    needs: test
 
     steps:
     - name: Checkout
