--- a/codename/package.json
+++ b/codename/package.json
@@ -26,6 +26,7 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-date-picker": "^8.0.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
